2004.03.06
  - Added File->Options->General File Types page where there's a Open Unknown File Types As Text option
  - Added AttachPlayerInput/DetachPlayerInput

2004.03.03
  - Added surface.gradientLine surface.gradientRectangle and surface.gradientTriangle functions
  - GradientLine now draws the colors in the correct order in standard32/16/8 etc
  - Added Get/SetPersonIgnoreList for telling a certain person to ignore certain other persons

2004.02.29
  - Added Get/SetPersonData (useful for finding out the number of frames in the person's current direction)
    and storing various data about a person.

2004.02.27
  - Added keyboard tile/image pixel editing keys (Up/Down/Left/Right space for move/place pixel)

2004.02.25
  - Added Get/SetTileSurface
  - if there's only one game in the games directory, execute that upon startup
    (so if you want to distibute your game with sphere, you can just not put any other games there)
  - Added SetLayerScaleFactorX/Y functions

2004.02.16
  - Fix Import Spritesets from RM2K Charset (it was missing the last frame of each direction)
  
2004.02.11
  - Zoom in/out shortcuts CTRL and + for zoom in and CTRL and - for zoom out
  - You can now paste into the main window and it'll create a document based on the clipboard type  
  - The script editor now highlight's good and bad braces (green for good, red for bad)
    If a brace is red, your script has a problem.
  - Shift + left click selects the current color in the image editor

2004.02.06
  - Added Redo to image editor
  - Added an options dialog

2004.02.02
  - Font preview palette added
  - Added preview to imageview's custom filter dialog
  - Added Map->Edit Entities to allow you to edit multiple entities at once

2004.01.30
  - You can now select multiple tiles in the tileset palette,
  and edit them as one single image in the tileset tab.

2004.01.27
  - Added tabbed windows

2004.01.17
  - Added a COMMAND_ANIMATE person command