@@ -580,8 +580,12 @@ CScript::ErrorReporter(JSContext* cx, const char* message, JSErrorReport* report
 
     // build an error
     std::ostringstream os;
-    os << "Script error in '" << (report->filename ? report->filename : "(no filename)") << "', line: " << (report->lineno + 1) << std::endl;
-    os << std::endl;
+
+    if ( !(strlen(message) > 0 && message[strlen(message) - 1] == '\n') ) {
+      os << "Script error in '" << (report->filename ? report->filename : "(no filename)") << "', line: " << (report->lineno + 1) << std::endl;
+      os << std::endl;
+    }
+
     os << message << std::endl;
     if (report->linebuf) {
       os << report->linebuf << std::endl;
